[tool.poetry]
name = "blog-tutorials"
version = "0.1.0"
description = ""
authors = ["James <jamesbrendamour3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
llama-index = "^0.10.59"
langchain = "^0.2.12"
streamlit = "^1.37.0"
llama-index-llms-ollama = "^0.2.2"
transformers = "^4.44.0"
torch = "^2.4.0"
tensorflow = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
